@@ -10,7 +10,7 @@ my $content_type = [ 'Content-Type', 'application/x-www-form-urlencoded' ];
 
 use RestTest;
 use DBICTest;
-use Test::More tests => 16;
+use Test::More;
 use Test::WWW::Mechanize::Catalyst 'RestTest';
 use HTTP::Request::Common;
 use JSON::Any;
@@ -21,7 +21,9 @@ ok(my $schema = DBICTest->init_schema(), 'got schema');
 my $track = $schema->resultset('Track')->first;
 my %original_cols = $track->get_columns;
 
-my $track_update_url = "$base/api/rest/track/" . $track->id;
+my $track_url = "$base/api/rest/track/";
+my $track_update_url = $track_url . $track->id;
+my $tracks_update_url = $track_url;
 
 # test invalid track id caught
 {
@@ -82,3 +84,20 @@ my $track_update_url = "$base/api/rest/track/" . $track->id;
 	is($track->title, 'monkey monkey', 'Title changed to "monkey monkey"');
 	is($track->cd->year, 2009, 'related row updated');
 }
+
+{
+  # order to get a stable order of rows
+  my $tracks_rs = $schema->resultset('Track')->search(undef, { order_by => 'trackid', rows => 3 });
+  my $test_data = JSON::Any->Dump({ list => [map +{ id => $_->id, title => 'Track ' . $_->id }, $tracks_rs->all] });
+  my $req = PUT( $tracks_update_url, Content => $test_data );
+  $req->content_type('text/x-json');
+  $mech->request($req);
+  cmp_ok( $mech->status, '==', 200, 'Attempt to update three tracks ok' );
+
+  $tracks_rs->reset;
+  while (my $track = $tracks_rs->next) {
+    is($track->title, 'Track ' . $track->id, 'Title changed');
+  }
+}
+
+done_testing();
