@@ -23,6 +23,7 @@ my %original_cols = $track->get_columns;
 
 my $track_update_url = "$base/api/rpc/track/id/" . $track->id . "/update";
 my $any_track_update_url = "$base/api/rpc/any/track/id/" . $track->id . "/update";
+my $tracks_update_url = "$base/api/rpc/track/update";
 
 # test invalid track id caught
 {
@@ -128,6 +129,21 @@ my $any_track_update_url = "$base/api/rpc/any/track/id/" . $track->id . "/update
 
   $track->discard_changes;
   is($track->get_column('position'), '14', 'Position changed');
+}
+
+{
+  # order to get a stable order of rows
+  my $tracks_rs = $schema->resultset('Track')->search(undef, { order_by => 'trackid', rows => 3 });
+  my $test_data = JSON::Any->Dump({ list => [map +{ id => $_->id, title => 'Track ' . $_->id }, $tracks_rs->all] });
+  my $req = POST( $tracks_update_url, Content => $test_data );
+  $req->content_type('text/x-json');
+  $mech->request($req);
+  cmp_ok( $mech->status, '==', 200, 'Attempt to update three tracks ok' );
+
+  $tracks_rs->reset;
+  while (my $track = $tracks_rs->next) {
+    is($track->title, 'Track ' . $track->id, 'Title changed');
+  }
 }
 
 done_testing();
